--- a/templates/login.html
+++ b/templates/login.html
@@ -48,7 +48,7 @@
 							</div>
 							<button class="btn btn-default"> GİRİŞ </button>
 							<hr />
-							<div class="text-center forget"> <a href="#."> ŞİFRENİZİ Mİ UNUTTUNUZ? </a> </div>
+							<div class="text-center forget"> <a href="/forgot_password"> ŞİFRENİZİ Mİ UNUTTUNUZ? </a> </div>
 						</div>
 						<div class="form-footer">
 							<a href="#."> <i class="fa-solid fa-phone-volume"></i> DESTEK İLE İLETİŞİME GEÇİN </a>
