--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
 	  <div class="modal-dialog fast-logreg">
 		<div class="modal-content">
 		  <div class="modal-body">
-			<div class="form-details">
+			<form methods="post" enctype="multipart/form-data" class="form-details">
 				<div class="form-header">
 					<div class="logo">
 						<a href="/"> <img src="/img/logo.png" /> </a>
@@ -46,7 +46,7 @@
 								Beni Hatırla
 							  </label>
 							</div>
-							<button class="btn btn-default"> GİRİŞ </button>
+							<button type="submit" class="btn btn-default"> GİRİŞ </button>
 							<hr />
 							<div class="text-center forget"> <a href="/forgot_password"> ŞİFRENİZİ Mİ UNUTTUNUZ? </a> </div>
 						</div>
@@ -55,7 +55,7 @@
 						</div>
 					</div>
 				</div>
-			</div>
+			</form>
 		  </div>
 		</div>
 	  </div>
