--- a/templates/signup.html
+++ b/templates/signup.html
@@ -28,7 +28,7 @@
 					</div>
 				</div>
 				<div class="form-content register">
-					<div class="form-elements">
+					<form methods="post" enctype="multipart/form-data" class="form-details">
 						<a href="#." class="dyn-text login">Üye misiniz? Tıklayarak, giriş yapın.</a>
 						<h3>ŞİMDİ KAYDOLUN, HERŞEY ÇOK KOLAY!</h3>
 						<div class="inputs was-validated">
@@ -67,12 +67,12 @@
 								Ayrıca tüm kurallar, şartlar, koşullar, politikalar ve ilgili diğer site kurallarını okuduğumu ve kabul ettiğimi onaylıyorum.
 							  </label>
 							</div>
-							<button class="btn btn-default"> KAYIT OL </button>
+							<button type="submit" class="btn btn-default"> KAYIT OL </button>
 						</div>
 						<div class="form-footer">
 							<a href="#."> <i class="fa-solid fa-phone-volume"></i> DESTEK İLE İLETİŞİME GEÇİN </a>
 						</div>
-					</div>
+					</form>
 				</div>
 			</div>
 		  </div>
