--- a/templates/login.html
+++ b/templates/login.html
@@ -18,7 +18,7 @@
 	  <div class="modal-dialog fast-logreg">
 		<div class="modal-content">
 		  <div class="modal-body">
-			<form methods="post" enctype="multipart/form-data" class="form-details">
+			<form method="post" enctype="multipart/form-data" class="form-details">
 				<div class="form-header">
 					<div class="logo">
 						<a href="/"> <img src="/img/logo.png" /> </a>
