--- a/templates/signup.html
+++ b/templates/signup.html
@@ -28,7 +28,7 @@
 					</div>
 				</div>
 				<div class="form-content register">
-					<form methods="post" enctype="multipart/form-data" class="form-details">
+					<form method="post" enctype="multipart/form-data" class="form-details">
 						<a href="#." class="dyn-text login">Üye misiniz? Tıklayarak, giriş yapın.</a>
 						<h3>ŞİMDİ KAYDOLUN, HERŞEY ÇOK KOLAY!</h3>
 						<div class="inputs was-validated">
