--- a/templates/anasayfa-yeni.html
+++ b/templates/anasayfa-yeni.html
@@ -158,8 +158,8 @@
 					<a href="mailto:sales@m2betting.com" class="btn"> <i class="km km-affiliate"></i> Affiliate </a>
 					<a href="/signup" class="btn"> <i class="km km-call"></i> Sizi Arayalım </a>
 					<a href="#." class="btn"> <i class="km km-whatsapp"></i> Whatsapp </a>
-					<a href="https://x.com/BetCitySocial" class="btn"> <i class="km km-telegram"></i> Telegram </a>
-					<a href="https://t.me/betcitysocial" class="btn"> <i class="km km-twitter"></i> Twitter </a>
+					<a href="https://t.me/betcitysocial" class="btn"> <i class="km km-telegram"></i> Telegram </a>
+					<a href="https://x.com/BetCitySocial" class="btn"> <i class="km km-twitter"></i> Twitter </a>
 				</div>
 				<div class="details">
 					<div class="col-2">
