--- a/templates/bahis/bahis_detay_yeni.html
+++ b/templates/bahis/bahis_detay_yeni.html
@@ -103,7 +103,9 @@
 						<div class="odds-opts">
 							<div class="odds-sep">
 								<div class="odds-list">
+                                    {% for i in open_bet.bet_options %}
 
+									{% endfor %}
 								</div>
 							</div>
 						</div>
