--- a/templates/bahis/bahis_detay_yeni.html
+++ b/templates/bahis/bahis_detay_yeni.html
@@ -104,7 +104,9 @@
 							<div class="odds-sep">
 								<div class="odds-list">
                                     {% for i in open_bet.bet_options %}
-
+                                    	{% if i.has_odds %}
+<p>{{ i.id }}</p>
+										{% endif %}
 									{% endfor %}
 								</div>
 							</div>
