--- a/templates/signup.html
+++ b/templates/signup.html
@@ -29,7 +29,7 @@
 				</div>
 				<div class="form-content register">
 					<form method="post" enctype="multipart/form-data" class="form-details">
-						<h3 style="color: white">ŞİMDİ KAYDOLUN, HERŞEY ÇOK KOLAY!</h3>
+						<h3 style="color: white; font-size: 18px; margin-top: 15px; margin-bottom: 15px;">ŞİMDİ KAYDOLUN, HERŞEY ÇOK KOLAY!</h3>
 						<div class="inputs was-validated">
 							<div class="form-floating mb-3">
 							  <input name="username" type="text" class="form-control" placeholder="İsim Soyisim" required>
