--- a/templates/signup.html
+++ b/templates/signup.html
@@ -40,11 +40,11 @@
 							  <label>E-Posta</label>
 							</div>
 							<div name="password" class="form-floating mb-3">
-							  <input type="password" class="form-control" placeholder="Şifre" required>
+							  <input type="password" name="password" class="form-control" placeholder="Şifre" required>
 							  <label>Şifre</label>
 							</div>
 							<div class="form-floating mb-3">
-							  <input type="text" class="form-control" placeholder="Telefon Numarası" required>
+							  <input type="text"  class="form-control" placeholder="Telefon Numarası" required>
 							  <label>Telefon Numarası</label>
 							</div>
 							<div class="form-floating mb-3">
