--- a/templates/signup.html
+++ b/templates/signup.html
@@ -44,19 +44,19 @@
 							  <label>Şifre</label>
 							</div>
 							<div class="form-floating mb-3">
-							  <input type="text"  class="form-control" placeholder="Telefon Numarası" required>
+							  <input name="tel_no" type="text"  class="form-control" placeholder="Telefon Numarası" required>
 							  <label>Telefon Numarası</label>
 							</div>
 							<div class="form-floating mb-3">
-							  <input type="text" class="form-control" placeholder="T.C. Kimlik No" required>
+							  <input name="id_no" type="text" class="form-control" placeholder="T.C. Kimlik No" required>
 							  <label>T.C. Kimlik No</label>
 							</div>
 							<div class="form-floating mb-3">
-							  <input type="date" class="form-control" placeholder="Doğum Tarihi" required>
+							  <input name="dob" type="date" class="form-control" placeholder="Doğum Tarihi" required>
 							  <label>Doğum Tarihi</label>
 							</div>
 							<div class="form-floating mb-3">
-							  <input type="text" class="form-control" placeholder="Promosyon Kodu">
+							  <input "promo_code" type="text" class="form-control" placeholder="Promosyon Kodu">
 							  <label>Promosyon Kodu</label>
 							</div>
 							<div class="form-check">
